# install-mcp

./: .gitignore  DISABLE_UNINSTALL_PLAN.md  LICENSE  README.md  index.html  install.ps1  install.sh  setup.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md
server/: __main__.py  mcp-config-update  mcp_config_updater.py  meta_mcp_server.py  multi_secret_collector.py  pyproject.toml  uv_detector.py  web_secret_collector.py
